2011-09-28  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[types] Handle "hex format" for ‘bytea’ objectifier.

	* postgres-types.scm (bytea): In this db-col-type
	objectifier, if the input begins with "\x", take it to be in
	"hex format" and parse it appropriately.  For other input,
	fall back to the traditional "escape format" handling.

2011-09-28  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Spiff ‘pg-make-print-options’ doc comment.

	* libpq.c (pg_make_print_options): In doc comment,
	use @t around symbols and "---" to separate name from blurb.

2011-09-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	New (database postgres-qcons) fluid: sql-quote-auto-E?

	* postgres-qcons.scm (sql-quote-auto-E?): New fluid, exported.
	(sql-quote): If ‘sql-quote-auto-E?’ is non-‘#f’ and there
	are one or more backslashes in the string, prefix an "E".

2011-09-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[scheme int] Use ‘zero?’ more.

	* postgres-gxrepl.scm (gxrepl -read): Use ‘zero?’.
	* postgres-resdisp.scm (display-result display-row): Likewise.

2011-09-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[qcons int] Cons less in ‘sql-quote’.

	* postgres-qcons.scm (sql-quote): Accumulate a list of
	range-pairs instead of a list of alternating range components.

2011-09-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq slog] Specialize ‘DEFSMOB’ for Guile 1.8+.

	* gi.h (DEFSMOB) [!GI_LEVEL_NOT_YET_1_8]: New macro.

2011-09-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq slog] Add abstractions: GCMALLOC, GCFREE, GCRV

	* gi.h (GCMALLOC, GCFREE, GCRV): New macros.
	* libpq.c (xc_free): Use ‘GCFREE’, ‘GCRV’.
	(lob_name): New static var.
	(lob_mklobport): Use ‘GCMALLOC’, ‘lob_name’.
	(lob_free): Use ‘GCFREE’, ‘GCRV’.
	(pg_connectdb): Use ‘GCMALLOC’.
	(sepo_name): Move earlier in file, before ‘sepo_free’; nfc.
	(sepo_free): Don't keep track of size; use ‘free’ directly for
	internal strings; use ‘GCFREE’, ‘sepo_name’, ‘GCRV’.
	(pg_make_print_options): Use ‘GCMALLOC’.
